--- a/src/Modules/CrestApps.OrchardCore.AI.Mcp/Views/Connections/Index.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Mcp/Views/Connections/Index.cshtml
@@ -4,9 +4,9 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @using OrchardCore.DisplayManagement
 
-@model ListModelViewModel<ModelEntry<McpConnection>>
+@model ListSourceModelViewModel<McpConnection>
 
-<zone Name="Title"><h1>@RenderTitleSegments(T["AI MCP Connections"])</h1></zone>
+<zone Name="Title"><h1>@RenderTitleSegments(T["MCP Connections"])</h1></zone>
 
 @* The form is necessary to generate an antiforgery token for the delete and toggle actions. *@
 <form asp-action="Index" method="post" class="no-multisubmit">
@@ -24,7 +24,7 @@
                     </div>
                 </div>
                 <div class="col-auto">
-                    <a class="btn btn-secondary create" asp-action="Create">@T["Add Connection"]</a>
+                    <button type="button" class="btn btn-secondary create" role="button" data-bs-toggle="modal" data-bs-target="#modalAddConnection">@T["Add Connection"]</button>
                 </div>
             </div>
         </div>
@@ -97,6 +97,39 @@
     </div>
 
 </form>
+
+<!-- Modal -->
+<div class="modal fade" id="modalAddConnection" tabindex="-1" role="dialog" aria-labelledby="available-rule-types-title" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="available-rule-types-title">@T["Available Sources"]</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                @if (!Model.SourceNames.Any())
+                {
+                    <p class="p-3 mb-2 bg-warning text-white">@T["No available sources at the moment."]</p>
+                }
+                else
+                {
+                    <div class="row row-cols-1 row-cols-md-3 g-2">
+                        @foreach (var source in Model.SourceNames)
+                        {
+                            IShape shape = await New.McpConnection_Link(Source: source);
+                            shape.Metadata.Alternates.Add("McpConnection_Link__" + source);
+
+                            @await DisplayAsync(shape)
+                        }
+                    </div>
+                }
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@T["Cancel"]</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script asp-src="~/CrestApps.OrchardCore.AI/scripts/admin-ui.min.js" debug-src="~/CrestApps.OrchardCore.AI/scripts/admin-ui.min.js" asp-name="ai-admin-ui" at="Foot"></script>
 
