--- a/src/Modules/CrestApps.OrchardCore.AI.Mcp/Views/Connections/Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Mcp/Views/Connections/Edit.cshtml
@@ -6,7 +6,7 @@
     <h1>@RenderTitleSegments(T["Edit '{0}' Connection", Model.DisplayName])</h1>
 </zone>
 
-<form method="post" asp-route-id="@ViewContext.HttpContext.Request.RouteValues["id"]" enctype="multipart/form-data" class="no-multisubmit">
+<form method="post" asp-route-id="@ViewContext.HttpContext.Request.RouteValues["providerName"]" enctype="multipart/form-data" class="no-multisubmit">
     @Html.ValidationSummary()
     @await DisplayAsync(Model.Editor)
 
@@ -14,5 +14,6 @@
 
     <a class="btn btn-secondary cancel"
        role="button"
-       asp-route-action="Index">@T["Cancel"]</a>
+       asp-route-action="Index"
+       asp-route-controller="Connections">@T["Cancel"]</a>
 </form>
