Add AI Data Sources Fix #95

--- a/src/Modules/CrestApps.OrchardCore.AI/Views/DataSources/Create.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/DataSources/Create.cshtml
@@ -3,10 +3,10 @@
 @model ModelViewModel
 
 <zone Name="Title">
-    <h1>@RenderTitleSegments(T["Edit '{0}' deployment", Model.DisplayName])</h1>
+    <h1>@RenderTitleSegments(T["New '{0}' deployment", Model.DisplayName])</h1>
 </zone>
 
-<form method="post" asp-route-id="@ViewContext.HttpContext.Request.RouteValues["Id"]" enctype="multipart/form-data" class="no-multisubmit">
+<form method="post" enctype="multipart/form-data" class="no-multisubmit">
     @Html.ValidationSummary()
     @await DisplayAsync(Model.Editor)
 
@@ -15,5 +15,5 @@
     <a class="btn btn-secondary cancel"
        role="button"
        asp-route-action="Index"
-       asp-route-controller="Deployments">@T["Cancel"]</a>
+       asp-route-controller="DataSources">@T["Cancel"]</a>
 </form>
