--- a/src/Modules/CrestApps.OrchardCore.AI/Views/DataSources/Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/DataSources/Edit.cshtml
@@ -15,5 +15,5 @@
     <a class="btn btn-secondary cancel"
        role="button"
        asp-route-action="Index"
-       asp-route-controller="Deployments">@T["Cancel"]</a>
+       asp-route-controller="DataSources">@T["Cancel"]</a>
 </form>
