--- a/src/Modules/CrestApps.OrchardCore.AI/Views/DataSources/Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/DataSources/Edit.cshtml
@@ -3,7 +3,7 @@
 @model ModelViewModel
 
 <zone Name="Title">
-    <h1>@RenderTitleSegments(T["Edit '{0}' deployment", Model.DisplayName])</h1>
+    <h1>@RenderTitleSegments(T["Edit '{0}' data-source", Model.DisplayName])</h1>
 </zone>
 
 <form method="post" asp-route-id="@ViewContext.HttpContext.Request.RouteValues["Id"]" enctype="multipart/form-data" class="no-multisubmit">
@@ -12,8 +12,5 @@
 
     <button class="btn btn-primary" type="submit">@T["Save"]</button>
 
-    <a class="btn btn-secondary cancel"
-       role="button"
-       asp-route-action="Index"
-       asp-route-controller="DataSources">@T["Cancel"]</a>
+    <a class="btn btn-secondary cancel" role="button" asp-route-action="Index">@T["Cancel"]</a>
 </form>
