--- a/src/Modules/CrestApps.OrchardCore.AI/Views/DataSources/Index.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/DataSources/Index.cshtml
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <div class="col-auto">
-                    <button type="button" class="btn btn-secondary create" role="button" data-bs-toggle="modal" data-bs-target="#modalAddDeployment">@T["Deploy model"]</button>
+                    <button type="button" class="btn btn-secondary create" role="button" data-bs-toggle="modal" data-bs-target="#modalAddDataSource">@T["Add data-source"]</button>
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@
 </form>
 
 <!-- Modal -->
-<div class="modal fade" id="modalAddDeployment" tabindex="-1" role="dialog" aria-labelledby="available-rule-types-title" aria-hidden="true">
+<div class="modal fade" id="modalAddDataSource" tabindex="-1" role="dialog" aria-labelledby="available-rule-types-title" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -117,9 +117,9 @@
                     <div class="row row-cols-1 row-cols-md-3 g-2">
                         @foreach (var source in Model.Sources)
                         {
-                            IShape shape = await New.AIDeployment_Link(ProviderName: source.ProviderName, Type: source.Type);
-                            shape.Metadata.Alternates.Add($"AIDataSource_Link__{source.ProviderName}");
-                            shape.Metadata.Alternates.Add($"AIDataSource_Link__{source.ProviderName}__{source.Type}");
+                            IShape shape = await New.AIDataSource_Link(ProviderName: source.ProfileSource, Type: source.Type, DataSourceKey: source);
+                            shape.Metadata.Alternates.Add($"AIDataSource_Link__{source.ProfileSource}");
+                            shape.Metadata.Alternates.Add($"AIDataSource_Link__{source.ProfileSource}__{source.Type}");
 
                             @await DisplayAsync(shape)
                         }
