add recipes and deployment-steps and update the documenation

--- a/src/Modules/CrestApps.OrchardCore.AI/Views/AIDataSource.DefaultMeta.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/AIDataSource.DefaultMeta.SummaryAdmin.cshtml
@@ -1,5 +1,6 @@
 @using System.Globalization
 @using CrestApps.OrchardCore.AI.Core.Models
+@using CrestApps.OrchardCore.AI.Models
 @using OrchardCore.DisplayManagement.Views
 
 @model ShapeViewModel<AIDataSource>
