--- a/src/Modules/CrestApps.OrchardCore.AI/Views/DataSources/Index.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/DataSources/Index.cshtml
@@ -1,5 +1,6 @@
 @using CrestApps.OrchardCore.AI.Core
 @using CrestApps.OrchardCore.AI.Core.Models
+@using CrestApps.OrchardCore.AI.Models
 @using CrestApps.OrchardCore.Core.Models
 @using Microsoft.AspNetCore.Mvc.Localization
 @using OrchardCore.DisplayManagement
