--- a/src/Modules/CrestApps.OrchardCore.OpenAI.Azure/Views/AzureOpenAIConnection.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI.Azure/Views/AzureOpenAIConnection.Edit.cshtml
@@ -1,4 +1,4 @@
-@using CrestApps.OrchardCore.Azure.Core.Models
+@using CrestApps.Azure.Core.Models
 @using CrestApps.OrchardCore.OpenAI.Azure.ViewModels
 @using OrchardCore
 
