--- a/src/Modules/CrestApps.OrchardCore.Users/Views/DisplayNameSettings.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Users/Views/DisplayNameSettings.Edit.cshtml
@@ -1,3 +1,4 @@
+@using CrestApps.OrchardCore.Users.Core.Models
 @using CrestApps.OrchardCore.Users.Core.ViewModels
 @using CrestApps.OrchardCore.Users.Models
 
