--- a/src/Modules/CrestApps.OrchardCore.AI/Views/AIDataSource.DefaultTags.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/AIDataSource.DefaultTags.SummaryAdmin.cshtml
@@ -1,4 +1,5 @@
 @using CrestApps.OrchardCore.AI.Core.Models
+@using CrestApps.OrchardCore.AI.Models
 @using OrchardCore.DisplayManagement.Views
 
 @model ShapeViewModel<AIDataSource>
