--- a/src/Modules/CrestApps.OrchardCore.AzureAIInference/Views/AzureAIInferenceConnection.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AzureAIInference/Views/AzureAIInferenceConnection.Edit.cshtml
@@ -1,4 +1,4 @@
-@using CrestApps.OrchardCore.Azure.Core.Models
+@using CrestApps.Azure.Core.Models
 @using CrestApps.OrchardCore.AzureAIInference.ViewModels
 @using OrchardCore
 
