cleanup after code review

--- a/src/Modules/CrestApps.OrchardCore.AI/Views/ToolInstances/Create.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/ToolInstances/Create.cshtml
@@ -12,7 +12,5 @@
 
     <button class="btn btn-primary" type="submit">@T["Save"]</button>
 
-    <a class="btn btn-secondary cancel"
-       role="button"
-       asp-route-action="Index">@T["Cancel"]</a>
+    <a class="btn btn-secondary cancel" role="button" asp-route-action="Index">@T["Cancel"]</a>
 </form>
