--- a/src/Modules/CrestApps.OrchardCore.AI/Views/Deployments/Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/Deployments/Edit.cshtml
@@ -12,8 +12,5 @@
 
     <button class="btn btn-primary" type="submit">@T["Save"]</button>
 
-    <a class="btn btn-secondary cancel"
-       role="button"
-       asp-route-action="Index"
-       asp-route-controller="Deployments">@T["Cancel"]</a>
+    <a class="btn btn-secondary cancel" role="button" asp-route-action="Index">@T["Cancel"]</a>
 </form>
