Add MongoDB as data source Fix #100

--- a/src/Modules/CrestApps.OrchardCore.OpenAI.Azure/Views/AzureOpenAIProfileElasticsearch.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI.Azure/Views/AzureOpenAIProfileElasticsearch.Edit.cshtml
@@ -10,7 +10,7 @@
         <select asp-for="IndexName" asp-items="Model.IndexNames" class="form-select">
             <option value="">@T["Select an index"]</option>
         </select>
-        <span class="hint">@T["The Azure AI search index to use as a data source."]</span>
+        <span class="hint">@T["The Elasticsearch index to use as a data source."]</span>
     </div>
 </div>
 
