--- a/src/Modules/CrestApps.OrchardCore.AI/Views/DataSources/Index.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI/Views/DataSources/Index.cshtml
@@ -90,7 +90,7 @@
         else
         {
             <li class="list-group-item list-group-item-info text-center ignore-elements">
-                @T["<strong>Nothing here!</strong> There are no deployments at the moment."]
+                @T["<strong>Nothing here!</strong> There are no data sources at the moment."]
             </li>
         }
     </ul>
