--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionsAdminListBulkActions.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionsAdminListBulkActions.cshtml
@@ -1,3 +1,3 @@
-@using CrestApps.OrchardCore.Subscriptions.ViewModels
+@using CrestApps.OrchardCore.Subscriptions.Core.Models
 
 @model ListSubscriptionOptions
