--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionsAdminListFilters.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionsAdminListFilters.cshtml
@@ -1,4 +1,4 @@
-@using CrestApps.OrchardCore.Subscriptions.ViewModels
+@using CrestApps.OrchardCore.Subscriptions.Core.Models;
 
 @model ListSubscriptionOptions
 
