--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionsAdminListSearch.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionsAdminListSearch.cshtml
@@ -1,4 +1,4 @@
-@using CrestApps.OrchardCore.Subscriptions.ViewModels
+@using CrestApps.OrchardCore.Subscriptions.Core.Models
 @using OrchardCore.Localization
 
 @model ListSubscriptionOptions
