--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionsAdminListSummary.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionsAdminListSummary.cshtml
@@ -1,4 +1,4 @@
-@using CrestApps.OrchardCore.Subscriptions.ViewModels
+@using CrestApps.OrchardCore.Subscriptions.Core.Models
 @using Microsoft.AspNetCore.Mvc.Localization
 
 @model ListSubscriptionOptions
